# wudoko

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
samples/3x2/: wordsInclude.txt
samples/3x3/: out.txt  wordsInclude.txt
samples/4x4/: wordsExclude.txt  wordsInclude.txt
samples/5x3/: wordsExclude2.txt  wordsExclude3.txt  wordsInclude.txt  wordsInclude2.txt  wordsInclude3.txt
samples/7x5/: wordsExclude.txt  wordsInclude.txt
tests/: test_core.py
wudoko/: __main__.py  wudoko.py
wudoko/lib/: board.py  grid.py  path.py  trajectory.py
wudoko/models/: data.py
