[project]
name            = "wudoko"
description     = "generate word grids"
authors         = [{name = "Rudolph Pienaar"}]
license         = "MIT"
readme          = "README.md"
requires-python = ">= 3.10"

dynamic         = ["version"]

[project.scripts]
wudoko          = "wudoko.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [ "/.github" ]

[tool.hatch.build.targets.wheel]
packages = [ "wudoko" ]

[tool.hatch.version]
path = "wudoko/__init__.py"
